--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@meshsdk/core": "^1.8.2",
+    "@meshsdk/react": "^1.8.2",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
